[gd_scene load_steps=10 format=2]

[ext_resource path="res://script/index_jugador.gd" type="Script" id=1]
[ext_resource path="res://img/n3.png" type="Texture" id=2]
[ext_resource path="res://img/n1.png" type="Texture" id=3]
[ext_resource path="res://img/n2.png" type="Texture" id=4]
[ext_resource path="res://img/n4.png" type="Texture" id=5]
[ext_resource path="res://scenes/back.tscn" type="PackedScene" id=6]
[ext_resource path="res://img/n2_b.png" type="Texture" id=7]
[ext_resource path="res://img/n4_b.png" type="Texture" id=8]
[ext_resource path="res://img/n3_b.png" type="Texture" id=9]

[node name="Nodo" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 560 )

[node name="n1" type="TouchScreenButton" parent="."]
position = Vector2( 64, 64 )
normal = ExtResource( 3 )

[node name="n2_b" type="Sprite" parent="."]
position = Vector2( 456, 128 )
texture = ExtResource( 7 )

[node name="n2" type="TouchScreenButton" parent="."]
position = Vector2( 376, 64 )
normal = ExtResource( 4 )

[node name="n3_b" type="Sprite" parent="."]
position = Vector2( 808, 128 )
texture = ExtResource( 9 )

[node name="n3" type="TouchScreenButton" parent="."]
position = Vector2( 728, 56 )
normal = ExtResource( 2 )

[node name="n4_b" type="Sprite" parent="."]
position = Vector2( 1136, 128 )
texture = ExtResource( 8 )

[node name="n4" type="TouchScreenButton" parent="."]
position = Vector2( 1056, 64 )
normal = ExtResource( 5 )
[connection signal="pressed" from="n1" to="." method="_on_n1_pressed"]
[connection signal="pressed" from="n2" to="." method="_on_n2_pressed"]
[connection signal="pressed" from="n3" to="." method="_on_n3_pressed"]
[connection signal="pressed" from="n4" to="." method="_on_n4_pressed"]
